# AI-Powered-Sudoku-Solver-and-Hint-System

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  SETUP.md  docker-compose.yml  hint_manager.py  requirements-dev.txt  requirements.txt  structure.txt
.github/: CODEOWNERS
.github/workflows/: cpp-tests.yml  docker-ci.yml  package-releases.yml
app/: api_server.py  hint_manager.py  main.py  run_solver.py  test_load_onnx.py  test_pipeline.py  train_onnx.py  verify_onnx.py
app/cv/: __init__.py  detector.py  recognizer.py
app/gui/: __init__.py  app_layout.py  sudoku_board.py  sudoku_cell.py  test_grid_only.py
app/hint_manager/: __init__.py  chain_generator.py  constants.py  gui_sync.py  hint_manager.py
app/models/: digit_model.onnx  digit_model.onnx.data
k8s/: deployment.yaml  service.yaml
models/: digit_model.onnx  digit_model.onnx.data
src/: DEVELOPER_GUIDE.md  bindings.cpp  solver_engine.cpp  solver_engine.hpp  types.hpp
src/strategies/: basic_strategies.cpp  fish_strategies.cpp  intersection_strategies.cpp  strategy_manager.hpp  wing_strategies.cpp
src/tests/: test_runner.cpp
src/tests/integration/: test_engine.cpp
src/tests/unit/: test_basic.cpp  test_intersection.cpp
src/utils/: hint_formatter.cpp  hint_formatter.hpp
